--- a/ssoClient/appsettings.json
+++ b/ssoClient/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ssoClient": {
-    "Doman": "atest.com"
+  "ConfigOption": {
+    "CenterDomain": "http://ssocenter.com:5225",
+    "ClientDomain": [ "http://atest.com:5132", "http://btest.com:7057" ]
   }
 }
