--- a/ssotest/appsettings.json
+++ b/ssotest/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConfigOption": {
+    "CenterDomain": "http://ssocenter.com:5225",
+    "ClientDomain": [ "http://atest.com:5132", "http://btest.com:5225" ]
+  },
+  "test1":"abcd"
 }
