--- a/ssoClient/appsettings.Development.json
+++ b/ssoClient/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConfigOption": {
+    "CenterDomain": "http://lssocenter.com:11001",
+    "ClientDomain": [ "http://latest.com:11002", "http://lbtest.com:11003", "http://lbtest.com:11004" ]
   }
 }
