--- a/ssoClient/appsettings.json
+++ b/ssoClient/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConfigOption": {
-    "CenterDomain": "http://ssocenter.com:5225",
-    "ClientDomain": [ "http://atest.com:5132", "http://btest.com:7057" ]
+    "CenterDomain": "http://ssocenter.com:11001",
+    "ClientDomain": [ "http://atest.com:11002", "http://btest.com:11003", "http://ctest.com:11004" ]
   }
 }
