--- a/ssoClient/Properties/launchSettings.json
+++ b/ssoClient/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://atest.com:5132"
+      "applicationUrl": "http://latest.com:5132"
     },
     "https": {
       "commandName": "Project",
