--- a/ssotest/appsettings.json
+++ b/ssotest/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConfigOption": {
-    "CenterDomain": "http://ssocenter.com:5225",
-    "ClientDomain": [ "http://atest.com:5132", "http://btest.com:5225" ]
+    "CenterDomain": "http://ssocenter.com:11001",
+    "ClientDomain": [ "http://atest.com:11002", "http://btest.com:11003", "http://ctest.com:11004" ]
   },
   "test1":"abcd"
 }
