--- a/SSOWeb/appsettings.json
+++ b/SSOWeb/appsettings.json
@@ -12,11 +12,11 @@
   "FreeSqlExtend": {
     "DBConnectionList": [
       {
-        "Name": "ssoCenter",
-        "ConnectionStr": "Server=192.168.18.247;Database=ssocenter;port=3306;User=admin;Password=Hqbuy@2022;TreatTinyAsBoolean=true;",
+        "Name": "SSOCenter",
+        "ConnectionStr": "Server=192.168.18.247;Database=ssoCenter;port=3306;User=admin;Password=Hqbuy@2022;TreatTinyAsBoolean=true;",
         "DbType": "MySql",
         "SlaveConnectionStr": [
-          "Server=192.168.18.247;Database=ssocenter;port=3306;User=admin;Password=Hqbuy@2022;TreatTinyAsBoolean=true;"
+          "Server=192.168.18.247;Database=ssoCenter;port=3306;User=admin;Password=Hqbuy@2022;TreatTinyAsBoolean=true;"
         ],
         "SlaveWeight": []
       } 
