--- a/ssoClient/appsettings.json
+++ b/ssoClient/appsettings.json
@@ -9,5 +9,10 @@
   "ConfigOption": {
     "CenterDomain": "http://ssocenter.com:11001",
     "ClientDomain": [ "http://atest.com:11002", "http://btest.com:11003", "http://ctest.com:11004" ]
+  },
+  "WeSitebConfig": {
+    "JwtSecret": "nqWxPZSECWJeGF6WqfBUsQw8MHdeU3",
+    "WebSiteMark": "lllllllaaaaa"
+
   }
 }
