演示程序,验证jumptoken完成

--- a/ssoClient/appsettings.json
+++ b/ssoClient/appsettings.json
@@ -10,7 +10,7 @@
     "CenterDomain": "http://ssocenter.com:11001",
     "ClientDomain": [ "http://atest.com:11002", "http://btest.com:11003", "http://ctest.com:11004" ]
   },
-  "WeSitebConfig": {
+  "WebSiteConfig": {
     "JwtSecret": "nqWxPZSECWJeGF6WqfBUsQw8MHdeU3",
     "WebSiteMark": "lllllllaaaaa"
 
