--- a/ssoClient/appsettings.Development.json
+++ b/ssoClient/appsettings.Development.json
@@ -6,7 +6,12 @@
     }
   },
   "ConfigOption": {
-    "CenterDomain": "http://lssocenter.com:5220",
+    "CenterDomain": "http://lssocenter.com:7115",
     "ClientDomain": [ "http://latest.com:5221", "http://lbtest.com:5222", "http://lctest.com:5223" ]
+  },
+  "WebSiteConfig": {
+    "JwtSecret": "nqWxPZSECWJeGF6WqfBUsQw8MHdeU3",
+    "WebSiteMark": "lllllllaaaaa"
+
   }
 }
