--- a/ssoCommon/ssoCommon.csproj
+++ b/ssoCommon/ssoCommon.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Refit" Version="6.3.3" />
   </ItemGroup>
